--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
             拖拽文件到这里
         </div>
     </div>
+
+    <div>
+        <button id="openBtn">打开新窗口</button>
+    </div>
+
+    <div>
+        <button id="btnSend">渲染进程执行主进程里面的方法（异步）</button>
+        <button id="sendReplay">渲染进程执行主进程里面的方法,主进程给渲染进程反馈处理结果（异步）</button>
+        <button id="btnSendSync">主进程和渲染进程通信（同步）</button>
+    </div>
 </body>
 <script src="render/index.js"></script>
+<!-- <script src="render/open.js"></script> -->
+<script src="render/ipcRenderer.js"></script>
 </html>
