--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
     </div>
 
     <div>
-        <button id="btnSend">渲染进程执行主进程里面的方法（异步）</button>
-        <button id="sendReplay">渲染进程执行主进程里面的方法,主进程给渲染进程反馈处理结果（异步）</button>
-        <button id="btnSendSync">主进程和渲染进程通信（同步）</button>
+        <button id="btnSend">渲染进程执行主进程里面的方法（异步）</button><br>
+        <button id="sendReplay">渲染进程执行主进程里面的方法,主进程给渲染进程反馈处理结果（异步）</button><br>
+        <button id="btnSendSync">主进程和渲染进程通信（同步）</button><br>
     </div>
+
+    <a id="alink" href="https://www.baidu.com/">在外部浏览器打开</a><br>
+
 </body>
 <script src="render/index.js"></script>
 <!-- <script src="render/open.js"></script> -->
 <script src="render/ipcRenderer.js"></script>
+<script src="render/link.js"></script>
 </html>
